@@ -1,4 +1,5 @@
 2.1.4
+	Fixes to bucketed databases when using lazyaw (Ranko Zivojnovic)
 	Tell local connexions are non IP instead of non IPv4 (Attila Bruncsak)
 	Faster ACL code (Attila Bruncsak)
 	Option to log expired entries (Jeff Rife)
